--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           go-version: "1.23.0"
 
-      - name: Go Version
-        run: (go version)
+      - name: Go Test
+        run: (go test./...)
         
       
