--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,5 +36,11 @@ jobs:
 
       - name: Go Format
         run: (test -z $(go fmt ./...))
+
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
+      - name: Go Linting
+        run: (staticcheck ./...)
         
       
