--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,3 +34,6 @@ jobs:
 
           - name: Build and Push Docker Image
             run: (gcloud builds submit --tag us-central1-docker.pkg.dev/notely-452310/notely-ar-repo/notely:latest .)
+
+          - name: Deploy to Cloud Run
+            run: gcloud run deploy notely us-central1-docker.pkg.dev/notely-452310/notely-ar-repo/notely:latest --region REGION --allow-unauthenticated --project PROJECT_ID --max-instances=4
