added migrations to cd

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,9 +9,15 @@ jobs:
         name: Deploy
         runs-on: ubuntu-latest
 
+        env:  
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
         steps:
           - name: Check out Code
             uses: actions/checkout@v4
+
+          - name: Install Goose
+            run: (go install github.com/pressly/goose/v3/cmd/goose@latest)
             
           - name: Set Up Go Toolchain
             uses: actions/setup-go@v5
@@ -35,5 +41,13 @@ jobs:
           - name: Build and Push Docker Image
             run: (gcloud builds submit --tag us-central1-docker.pkg.dev/notely-452310/notely-ar-repo/notely:latest .)
 
+          - name: 'Run migrations'
+            run: (./scripts/migrateup.sh)
+
           - name: Deploy to Cloud Run
             run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-452310/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-452310 --max-instances=4
+
+          - name: 'Git diff'
+            run: 'git diff'
+
+          
